--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   flex-direction: column;
   text-align: center;
   width: 70%;
+  min-width: 250px;
   padding: 20px;
   font-family: 'Roboto Mono', monospace;
   color: #222222;
@@ -48,8 +49,10 @@
 
   background-color: transparent;
   background-image: url('./img/menu.png');
-  background-size: contain;
+  background-size: cover;
+}
 
+.nav-btn:hover {
   cursor: pointer;
 }
 
@@ -158,6 +161,28 @@
   }
   .nav-closed {
     display: block;
+  }
+}
+
+@media (max-width: 767px) {
+  .nav-closed {
+    display: none;
+  }
+
+  .navigation {
+    display: flex;
+    flex-direction: column;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #e1ebd6;
+    width: 150px;
+    padding: 5px;
+    border-radius: 6px;
+    border: 1px solid gray;
   }
 }
 
